# system-notification

./: Cargo.toml  README.md  main.py  requirements.txt
.github/workflows/: build.yml  rust.yml  test.yml
src/: main.rs
