[package]
name = "system-notification"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
dotenv = "0.15.0"
reqwest = "0.12.3"
serde_json = "1.0.115"
sysinfo = "0.30.10"
tokio = { version = "1.37.0", features = ["full"] }
